2009-06-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr.py: Added support for getting original phtos.
	* photoframe.py, photoliststore.py, gphotoframe.glade:
	  Added support for Recent Photos (issue #14).

2009-06-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Added a key board accelerator for full screen mode.
	  Hide the mouse cursor in full screen mode.

2009-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Added UI for full screen mode.

2009-06-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Improved the implementation of full screen mode.

2009-06-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Added support for full screen mode.

2009-06-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base.py (Photo.open): Escape "'" characters in url.  Fixed issue #20.

2009-06-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.3.1 release.

2009-06-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Added support for "media content" elements.
	* preferences.py (PreferencesTreeView): Dont' use markup on
	  gtk.CellRendererText.
	
2009-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base.py, flickr.py, picasa.py: Fixed issue #19. (Can't
	  reconfigure photo source settings of Picasa Web Album.)

2009-06-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* picasa.py (PicasaPhotoList): Fixed issue #18. (The User target of
	  the Picasa Web Plugin shows only one album.)

2009-06-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* picasa.py (PluginPicasaDialog): Fixed issue #17. (Can't set the
	  Google Account).

2009-06-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.3 release.
	* photoframe.py (PhotoImage): Check if the local file exists.

2009-06-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/*.py: Added support for updating the photo list
	  periodically.
	* photoframe.py (PopUpMenu): Set the sensitiveness of
	  the menu item 'open'.
